# autoresearch-council-arena

./: .env.example  .env.swp  .gitignore  README.md  artifact.md  artifact_initial.md  artifact_tutorial_initial.md  config.py  critique.md  evaluate.py  events.jsonl  openrouter.py  program.md  pyproject.toml  run.py  start.sh  tried_strategies.md
backend/: server.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  MODELS.md  MONITORING.md  QUICKSTART.md  RUN_ANALYSIS.md  TASK_DESIGN.md  USER_GUIDE.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  ArtifactView.jsx  ResultsChart.jsx  Stage1.jsx  Stage2.jsx  Stage3.jsx  index.css
tests/: test_progressive_improvement.py
